--- a/README
+++ b/README
@@ -1,4 +1,19 @@
-## Houtan Noushmehr, PhD
+##
+May 17, 2012 - Repo made public.
+
+##
+May 13, 2012 - FunciSNP manuscript accepted in Nucleic Acids Research.
+doi: 10.1093/nar/GKS542
+
+##
+Feb 3, 2012 - Reorganized folder project. Added new versions of FunciSNP.
+
+new version of TSS.human.GRCh37
+from genomebrowser on 2012-03-26 
+filtered only rows with "hg19.knonwCanonical.transcript" != "na"
+no duplicated ensembl id's allowed no "na" ensembl id's allowed
+
+##
 September 27, 2011
 This project contains all the current working in house scripts for the Coetzee Lab.
 
@@ -6,12 +21,4 @@ This project contains all the current working in house scripts for the Coetzee L
 Each folder represents one in house script. View README within is folder for more information.
 
 
-##
-Feb 3, 2012 - Reorganized folder project. Added new versions of FunciSNP.
-
-
-new version of TSS.human.GRCh37
-from genomebrowser on 2012-03-26 
-filtered only rows with "hg19.knonwCanonical.transcript" != "na"
-no duplicated ensembl id's allowed no "na" ensembl id's allowed
 
