--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+New URL: http://coetzeeseq.usc.edu/publication/Coetzee_SG_et_al_2012/
+
 Abstract/Summary:
 Single nucleotide polymorphisms (SNPs) are increasingly used to tag genetic loci
 associated with phenotypes such as risk of complex diseases. Technically, this
