--- a/FunciSNP/inst/NEWS
+++ b/FunciSNP/inst/NEWS
@@ -1,5 +1,7 @@
 Package: FunciSNP
 =================
+Version: 0.99.0 [2012-05-25]
+o   Updated package to address issues and comments by BioC curator.
 
 Version: 0.2.0 [2012-05-18]
 o   Initial Bioconductor release. New citation included. 
