trimmed down funcisnp.data and updated funcisnp.R to reflect new data locations, all packages build without errors in R-patched

--- a/FunciSNP.data/inst/doc/FunciSNP.data.Rnw
+++ b/FunciSNP.data/inst/doc/FunciSNP.data.Rnw
@@ -1,9 +1,9 @@
 %\VignetteIndexEntry{FunciSNP Vignette}
-%\VignetteDepends{FunciSNP}
+%\VignetteDepends{FunciSNP.data}
 %\VignetteKeywords{SNP}
 %\VignetteKeywords{Functional}
 %\VignetteKeywords{GWAS}
-%\VignettePackage{FunciSNP}
+%\VignettePackage{FunciSNP.data}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[12pt,fullpage]{article}
 \usepackage{amsmath,epsfig,fullpage}
