--- a/README
+++ b/README
@@ -25,7 +25,7 @@ May 17, 2012 - Repo made public.
 
 ##
 May 13, 2012 - FunciSNP manuscript accepted in Nucleic Acids Research.
-doi: 10.1093/nar/GKS542
+doi: 10.1093/nar/gks542
 
 ##
 Feb 3, 2012 - Reorganized folder project. Added new versions of FunciSNP.
